--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,36 @@
 body{
-    background-color: beige;
+    background-color: rgb(215, 242, 243);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.register-bcg{
+    margin: 100px auto;
+    width: 500px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5%;
+    height: 400px;
+
+}
+
+.register-form{
+    float:inline-start;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.login-bcg{
+    margin: 100px auto;
+    width: 500px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5%;
+    height: 400px;
+
+}
+
+.login-form{
+    float:inline-start;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
