--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,7 +10,7 @@
 
 
 
-    <div class="container">
+    <div class="container_auth">
           
       <div class="login">
           <h3 class="title">log in</h3>
