--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -11,7 +11,7 @@
 
 
 
-      <div class="container">
+      <div class="container_auth">
           
           <div class="login">
               <h3 class="title">inscription</h3>
