--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Profil de l'utilisateur connecté {% endblock %}</h1>
+  <h3>{% block title %}
+    <div class="padding_date" >
+      <script >
+    
+      var current_date = new Date();
+      var day_count = current_date.getDay();
+      var day = current_date.getDate();
+      var month = current_date.getMonth();
+    
+      const day_week = ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"];
+      const month_year = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Aout","Septembre", "Octobre", "Novembre", "Décembre"];
+    
+      var date = day_week[day_count] + " " + day + " " + month_year[month] ;
+      document.write(date);
+      </script>
+  </div>{% endblock %}</h3>
 {% endblock %}
 
 {% block content %}
-    <ul>
-        <li>Username: {{g.user.username}}</li>
-        <li>Password: {{g.user.password}}</li>
-    </ul>
-    
+      <div class="container_index">
+        <h2 class="titre_profil">Mon profile</h2>
+        <ul>
+          <li>Username: {{g.user.username}}</li>
+          <li>Password: {{g.user.password}}</li>
+        </ul>
+      </div>
 {% endblock %}
