--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -21,6 +21,12 @@
               <div class="text-input">
                   <input type="password" placeholder="password" name="password" id="password" required>
               </div>
+              <div class="text-input">
+                <input type="text" placeholder="first_name" name="first_name" id="first_name" required>
+                 </div>
+            <div class="text-input">
+                <input type="text" placeholder="last_name" name="last_name" id="last_name" required>
+                 </div>
               <button class="login-btn">GO!</button>
               <div class="create">
                   <a href="{{ url_for('auth.login') }}">déjà inscris? <span style="color: #C4E6E5;">connecte toi !</span></a>
