--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -19,8 +19,22 @@
 
 
 <div class="container_index">
-
-
+  <div class="texte_index_container">
+    <h1>Hi <span style="color: #FFD372;">{{g.user.first_name}}!</span></h1>
+    <h2>Voici <span style="color: #FFD372;">l'entrainement d'aujourd'hui :</span></h2>
+  </div>
+  <div class="container_rose">
+    <div class="container_1">
+      <h1 style="padding: 1vh;color: #FBBECA;">sets de sauts</h1>
+    </div>
+    <div class="container_1"></div>
+    <div class="container_1"></div>
+    <div class="container_1"></div>
+    <div class="container_1"></div>
+  </div>
+  
+  <div class="texte_index_container" style="position: absolute;top: 70vh;">
+  <h2>comment <span style="color: #FFD372;">s'est passé </span>l'entrainement</h2></div>
 </div>
 
 {% endblock %}
