--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -21,6 +21,7 @@
 <div class="container_index">
   <div class="texte_index_container">
     <h1>Hi <span style="color: #FFD372;">{{g.user.first_name}}!</span></h1>
+    
     <h2>Voici <span style="color: #FFD372;">l'entrainement d'aujourd'hui :</span></h2>
   </div>
   <div class="container_rose">
@@ -33,8 +34,16 @@
     <div class="container_1"></div>
   </div>
   
-  <div class="texte_index_container" style="position: absolute;top: 70vh;">
-  <h2>comment <span style="color: #FFD372;">s'est passé </span>l'entrainement</h2></div>
+  <div class="texte_index_container" style="position: absolute;top: 65vh;">
+  <h2>comment <span style="color: #FFD372;">s'est passé </span>l'entrainement ?:</h2></div>
+  
+  <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;margin-top:56vh;" >
+    <i class="Object" id="1">&#128128;</i>
+    <i class="Object" id="2">&#128577;</i>
+    <i class="Object" id="3">&#128528;</i>
+    <i class="Object" id="4">&#128578;</i>
+    <i class="Object" id="5">&#128513;</i> 
+  </div>
 </div>
 
 {% endblock %}
