--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,7 @@
     </section>
 
     <script type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
 </body>
 
 </html>
