--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -218,14 +218,36 @@ ul,li{
 
 
 .container_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     background-color: #FFA1B4;
-    width: 30vw;
+    width: 20%;
     height: 40vh;
     border-radius: 20px;
 }
+.container_2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: none;
+    width: 20%;
+    height: 40vh;
+    border-radius: 20px;
+}
+.container_3{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #FFA1B4;
+    width: 100%;
+    height: 49%;
+    border-radius: 20px;
+}
+
 .padding_date{
     font-size: larger;
-    margin-left: 20%;
+    margin-left: 17%;
     margin-top: 1vh;
 
 }
@@ -249,7 +271,7 @@ ul,li{
     background-color: pink;
     border-radius: 50%;
 }
-</style></div>
+
 
 /*nav*/
 #sidenav{
@@ -273,12 +295,11 @@ ul,li{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 10%;
+    width: 9vw;
     font-size: 12px;
     padding: 6px;
     padding-right: 60px;
     border-radius: 8px;
-    
     margin-right:auto;
     background-color: rgba(215, 243, 242, 0.205);
     box-shadow: 0 0 17px 10px rgb(0 0 0 / 5%);
