--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,8 +47,8 @@
         {% block content %}{% endblock %}
     </section>
 
-    <script type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
+    <script defer type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
+    <script defer type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
 </body>
 
 </html>
