--- a/app/templates/base_prof.html
+++ b/app/templates/base_prof.html
@@ -35,6 +35,10 @@
                     <div id="petit-carre4"></div>
                     <a href="{{ url_for('home.team_prof') }}">groupe</a>
                 </div>
+                <div class="alignement_nav">
+                    <div id="petit-carre5"></div>
+                    <a href="{{ url_for('home.add_team') }}">groupe</a>
+                </div>
             </div>
         </div>
        
