--- a/app/static/css/style-prof.css
+++ b/app/static/css/style-prof.css
@@ -96,7 +96,7 @@ body{
     width: 12px;
     height: 12px;
     border-radius: 30%;
-    background-color: rgb(180, 236, 234);
+    background-color: #b4ecea;
     margin-left: 10%;
     margin-right: 5%;
 
@@ -156,6 +156,9 @@ body{
     justify-content: flex-start;
 }
 
+.alignement_nav:hover {
+    color: #fdd0de;
+}
 
 @media screen and (max-width: 800px) {
     .nav_prof {
@@ -329,7 +332,7 @@ body{
 }
 
 .teamCard_big{
-    height: 90%;
+    height: 30%;
     width: 80%;
     background-color: #FDFDFD;
     border-radius: 15px;
@@ -400,10 +403,10 @@ background: none;
     justify-content: flex-start;
     align-items: center;
     background-color: #fdfdfd91;
-    width: 70%;
-    height: 70%;
-    margin-bottom: 10%;
-    margin-right: 10%;
+    width: 80%;
+    height: 80%;
+    margin-bottom: 7%;
+    margin-right: 7%;
     border-radius: 15px;
 }
 
@@ -413,7 +416,7 @@ background: none;
     align-items: center;
     color: #6f6f6f;
     border-bottom: 2px #6f6f6f solid;
-    height: 20%;
+    height: 15%;
     width: 90%;
     
 }
@@ -425,30 +428,42 @@ background: none;
     align-items: center;
     color: #6f6f6f;
     border-bottom: 2px #6f6f6f solid;
-    height: 20%;
+    height: 17%;
     width: 90%;
     
 }
 
-.add_sport{
+.sport_team{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
     color: #6f6f6f;
     border-bottom: 2px #6f6f6f solid;
-    height: 40%;
+    height: 48%;
     width: 90%;
     
 }
 
 .button_space{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 20%;
     width: 90%;
     
+}
+
+.add_name{
+    background: #FDFDFD;
+    height: 55px;
+    display: flex;
+    width: 30%;
+    align-items: center;
+    border-radius: 10px;
+    padding: 0 15px;
+    margin-left: 3%;
+    margin-top: 7px;
 }
 
 .add_name input{
@@ -461,7 +476,7 @@ background: none;
     font-size: 100%;
 }
 
-.add_name{
+.add_sport{
     background: #FDFDFD;
     height: 55px;
     display: flex;
@@ -470,8 +485,9 @@ background: none;
     border-radius: 10px;
     padding: 0 15px;
     margin-left: 3%;
-    
+    margin-top: 7px;
 }
+
 
 .add_sport input{
     background: none;
@@ -483,15 +499,128 @@ background: none;
     font-size: 100%;
 }
 
+.terminer_equipe{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 50%;
+    width: 15%;
+    margin-top: 7px;
+}
+
+.finished-link{
+    display: inline-block;
+    background-color: #ffc0cb;
+    font-size: 150%;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    width: 130%;
+    height: 100%;
+    font-size: 100%;
+    color: #fdfdfd;
+    cursor: pointer;
+}
+
+.finished-btn:hover{
+    background-color: #fdfdfd;
+    color: pink;
+}
+
+.back-link{
+    color: #fdfdfd;
+}
+
+.back-link:hover{
+    color: pink;
+}
+
+.high_part{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.body_profil{
+    
+    height: 100vh;
+    /*background-image: linear-gradient(to right top, #d7f3f2, #bdebf8, #afe0ff, #b7d0ff, #d3bbff, #e8aeec, #f8a3d3, #ff9bb7, #ffa2a3, #ffae8d, #ffc07c, #ffd372);*/
+    background-image: radial-gradient(circle, #fed032, #ffc259, #ffb97c, #ffb59a, #ffb7b2, #febcc9, #f6c3de, #ebcced, #d9d9fb, #cce4fd, #ccedf8, #d7f3f2);
+}
+
+.titre_profil{
+    font-size: 40px;
+    font-weight: 800;
+    margin:  30px; 
+}
+
+.container_index_profil {
+    margin-left: 10vh;
+    margin-top: 3vh;
+    width: 45vw;
+    height: 55vh;
+    box-shadow: 0 0 17px 10px rgb(0 0 0 / 5%);
+    border-radius: 20px;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    
+}
+
+ul, li {
+    list-style: none;
+    padding: 20px;
+}
+
+.container_rose {
+    display: flex;
+    gap: 1vh;
+    margin-left: 7%;
+    width: 65vw;
+    height: 60%;
+    box-shadow: 0 0 17px 10px rgb(0 0 0 / 5%);
+    border-radius: 20px;
+    background: #fdfdfd;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    
+}
 
 
-
-
-
-
-
-
-
+.container_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #fdd6e2;
+    width: 20%;
+    height: 100%;
+    border-radius: 20px;
+}
+.container_2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: none;
+    width: 20%;
+    height: 100%;
+    border-radius: 20px;
+}
+.container_3{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #fdd6e2;
+    width: 100%;
+    height: 49%;
+    border-radius: 20px;
+}
 
 .hide{
     display: none;
