--- a/app/templates/home/add_team.html
+++ b/app/templates/home/add_team.html
@@ -7,26 +7,35 @@
 <div class="container_add">
     <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%;">Equipes:</h1>
     <div class="add_teams">
-       <div class="container_white">
+
+            <form method="post" class="container_white">
+                <div class="mod_team">
+                    <h1> + Ajouter une équipe:</h1>
+                </div>
+                <div class="name_team">
+                    <h1>Nom de l'équipe :</h1>
+                    <div class="add_name">
+                        <input type="text" placeholder="nom" name="add_name" id="add_name" required>
+                    </div>
+                </div> 
+                <div class="sport_team">
+                    <h1>Ajouter un participant:</h1>
+                    <div class="add_sport">
+                        <input type="text" placeholder="username" name="add_sport" id="add_sport">
+                    </div>
+                </div>
+                <div class="button_space">
+                    <div class="retour_equipe">
+                        <a href="{{ url_for('home.team_prof') }}" class="back-link" > <- retour aux équipes</a> 
+                    </div>
+                    <div class="terminer_equipe">
+                        <input type="submit" class="finished-btn" value="Terminer">
+                    </div>
+                </div>    
+        
+            </form>
+
     
-            <div class="mod_team">
-                <h1>+ Ajouter une équipe :</h1>
-            </div>
-            <div class="name_team">
-                <h1>Nom de l'équipe :</h1>
-                <div class="add_name">
-                    <input type="text" placeholder="nom" name="add_name" id="add_name" required>
-                </div>
-            </div> 
-            <div class="add_sport">
-                <h1>Ajouter un participant:</h1>
-                <div class="add_name">
-                    <input type="text" placeholder="adresse e-mail" name="add_name" id="add_name" required>
-                </div>
-            </div>
-            <div class="button_space">
-            </div>
-       </div>
     </div>
 
 
